--- a/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_kategorie_default.html
+++ b/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_kategorie_default.html
@@ -1,19 +1,19 @@
-<!-- <!DOCTYPE html>-->
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+   "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>[SHOP_TITLE]</title>
-    <meta name="author" content="Pros Pro Versand GmbH, Froebelstrasse 24, 4020 Linz">
-    <meta name="robots" content="index">
-    <meta name="content-language" content="[LANGUAGE_SELECTED]">
+    <meta name="author" content="Pros Pro Versand GmbH, Froebelstrasse 24, 4020 Linz" />
+    <meta name="robots" content="index" />
+    <meta name="content-language" content="[LANGUAGE_SELECTED]" />
     <meta name="PAGETOSHOW" content="[PAGETOSHOW]" />
     [EMBED:template_[PAGETOSHOW]_head.htm] 
     <link rel="shortcut icon" href="http://www.pros-pro.com/favicon.ico" />
     <link rel="icon" href="http://www.pros-pro.com/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="skins/skin_arfaian_2009/pages/style.css" type="text/css" />
-
     <link rel="search" type="application/opensearchdescription+xml" title="Suche in Pro's Pro Shop " href="/opensearch" />
 
-    <script>
+    <script type="text/javascript">
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -38,20 +38,20 @@
 </head>
 <body topmargin="0" leftmargin="0" rightmargin="0" bottommargin="0">
     <div align="center">
-        <table border="0" width="1000" id="table1" cellspacing="0" cellpadding="0">
+        <table border="0" width="1000" id="table1" cellspacing="0" cellpadding="0" summary="design" >
             <tr>
                 <td width="1000" colspan="3">
-                    <img border="0" src="../images/spacer.gif" width="1" height="8" />
+                    <img border="0" src="../images/spacer.gif" width="1" height="8" alt="" />
                 </td>
             </tr>
             <tr>
                 <td colspan="2">
                     <a href="default.aspx">
-                        <img border="0" src="../images/logo/logo.gif" hspace="24" /></a>
+                        <img border="0" src="../images/logo/logo.gif" hspace="24" alt=""/></a>
                 </td>
                 <td width="555">
                     <div class="Section1">
-                        <table border="0" width="100%" id="table10" cellspacing="0" cellpadding="0">
+                        <table border="0" width="100%" id="table10" cellspacing="0" cellpadding="0" summary="design">
                             <tr>
                                 <td>
                                     <a href="skins/skin_arfaian_2009/pages/bestpreisgarantie.htm" target="_blank">
@@ -59,7 +59,7 @@
                                 </td>
                                 <td width="280">
                                     <p align="right">
-                                        <img border="0" src="../images/small_logos/brand.gif" />
+                                        <img border="0" src="../images/small_logos/brand.gif" alt="Brand" />
                                     </p>
                                 </td>
                             </tr>
@@ -69,7 +69,7 @@
             </tr>
             <tr>
                 <td colspan="3">
-                    <table border="0" width="100%" id="table5" cellspacing="0" cellpadding="0">
+                    <table border="0" width="100%" id="table5" cellspacing="0" cellpadding="0" summary="design">
                         <tr>
                             <td colspan="2">
                                 &nbsp;
@@ -93,19 +93,19 @@
             </tr>
             <tr>
                 <td colspan="3" _background="../images/bg/bg_line_main_menu.gif">
-                    <table border="0" width="100%" id="table3" cellspacing="0" cellpadding="0">
+                    <table border="0" width="100%" id="table3" cellspacing="0" cellpadding="0" summary="design">
                         <tr>
                             <td width="24">
-                                <img border="0" src="../images/spacer.gif" width="1" height="1" />
+                                <img border="0" src="../images/spacer.gif" width="1" height="1" alt="" />
                             </td>
                             <td width="846">
-                                <img border="0" src="../images/spacer.gif" width="1" height="1" /><img border="0"
-                                    src="../images/spacer.gif" width="1" height="1" />
+                                <img border="0" src="../images/spacer.gif" width="1" height="1" alt="" /><img border="0"
+                                    src="../images/spacer.gif" width="1" height="1" alt="" />
                             </td>
                             <td valign="bottom">
                                 <p align="right">
                                     <a href="default.asp?pageToShow=warenkorbStep1">
-                                        <img border="0" src="../images/buttons/basket_top.gif" width="129" height="18" /></a>
+                                        <img border="0" src="../images/buttons/basket_top.gif" width="129" height="18" alt="" /></a>
                                 </p>
                             </td>
                         </tr>
@@ -114,26 +114,26 @@
             </tr>
             <tr>
                 <td colspan="3" valign="top">
-                    <table border="0" width="100%" id="table2" cellspacing="0" cellpadding="0">
+                    <table border="0" width="100%" id="table2" cellspacing="0" cellpadding="0" summary="design">
                         <tr>
                             <td width="1" bgcolor="#999999" rowspan="4">
-                                <img border="0" src="../images/spacer.gif" width="1" height="1" />
+                                <img border="0" src="../images/spacer.gif" width="1" height="1" alt=""/>
                             </td>
                             <td background="../images/bg/bg_main_menu.gif">
-                                <img border="0" src="../images/spacer.gif" width="1" height="15" />
+                                <img border="0" src="../images/spacer.gif" width="1" height="15" alt="" />
                             </td>
                             <td bgcolor="#999999" width="1" rowspan="4">
-                                <img border="0" src="../images/spacer.gif" width="1" height="1" />
+                                <img border="0" src="../images/spacer.gif" width="1" height="1" alt="" />
                             </td>
                         </tr>
                         <tr>
                             <td background="../images/bg/bg_2line_main_menu.gif">
-                                <img border="0" src="../images/spacer.gif" width="1" height="2" />
+                                <img border="0" src="../images/spacer.gif" width="1" height="2" alt="" />
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <table border="0" width="100%" id="table4" cellspacing="0" cellpadding="0">
+                                <table border="0" width="100%" id="table4" cellspacing="0" cellpadding="0" summary="design">
                                     <tr>
                                         <td background="../images/bg/bg_line_cat_menu.gif" height="18" width="2%">
                                             &nbsp;
@@ -142,30 +142,30 @@
                                             <font size="1" color="#666666">[PAGETOSHOW] [CATEGORYPATH]</font>
                                         </td>
                                         <td width="4%">
-                                            <img border="0" src="../images/corner_part/part1.gif" width="44" height="18" />
+                                            <img border="0" src="../images/corner_part/part1.gif" width="44" height="18" alt="" />
                                         </td>
                                         <td width="13%">
                                             <a href="default.asp?PageToShow=MyAccount">
-                                                <img border="0" src="../images/corner_part/part4.gif" width="140" height="18" /></a>
+                                                <img border="0" src="../images/corner_part/part4.gif" width="140" height="18" alt="MyAccount"/></a>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td background="../images/bg/bg_2line_main_menu.gif" colspan="2">
-                                            <img border="0" src="../images/spacer.gif" width="1" height="2" />
+                                            <img border="0" src="../images/spacer.gif" width="1" height="2" alt="" />
                                         </td>
                                         <td width="44">
-                                            <img border="0" src="../images/corner_part/part3_middle.gif" width="44" height="2" />
+                                            <img border="0" src="../images/corner_part/part3_middle.gif" width="44" height="2" alt=""/>
                                         </td>
                                         <td width="13%">
-                                            <img border="0" src="../images/spacer.gif" width="1" height="2" />
+                                            <img border="0" src="../images/spacer.gif" width="1" height="2"  alt=""/>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td bgcolor="#EFEFEF" colspan="2">
-                                            <table border="0" width="100%" id="table8" cellspacing="0" cellpadding="0">
+                                            <table border="0" width="100%" id="table8" cellspacing="0" cellpadding="0" summary="design">
                                                 <tr>
                                                     <td width="13">
-                                                        <img border="0" src="../images/spacer.gif" width="1" height="1" />
+                                                        <img border="0" src="../images/spacer.gif" width="1" height="1" alt="" />
                                                     </td>
                                                     <td>
                                                         [SIMPLE_SEARCH_FORM]
@@ -174,7 +174,7 @@
                                             </table>
                                         </td>
                                         <td width="4%" valign=top>
-                                            <img border="0" src="../images/corner_part/part2.gif" width="44" height="20" />
+                                            <img border="0" src="../images/corner_part/part2.gif" width="44" height="20" alt="" />
                                         </td>
                                         <td width="13%" valign="top">
                                             [CURRENT_USER]
@@ -185,7 +185,7 @@
                         </tr>
                         <tr>
                             <td bgcolor="#CFCFCF">
-                                <img border="0" src="../images/spacer.gif" width="1" height="1" />
+                                <img border="0" src="../images/spacer.gif" width="1" height="1" alt="" />
                             </td>
                         </tr>
                     </table>
@@ -193,16 +193,16 @@
             </tr>
             <tr>
                 <td colspan="3">
-                    <table border="0" width="100%" id="table9" cellspacing="0" cellpadding="0">
+                    <table border="0" width="100%" id="table9" cellspacing="0" cellpadding="0" summary="design">
                         <tr>
                             <td width="1" bgcolor="#999999">
-                                <img border="0" src="../images/spacer.gif" width="1" height="1" />
+                                <img border="0" src="../images/spacer.gif" width="1" height="1" alt="" />
                             </td>
                             <td>
                                 [BODY]
                             </td>
                             <td width="1" bgcolor="#999999">
-                                <img border="0" src="../images/spacer.gif" width="1" height="1" />
+                                <img border="0" src="../images/spacer.gif" width="1" height="1" alt="" />
                             </td>
                         </tr>
                     </table>
@@ -210,7 +210,7 @@
             </tr>
             <tr>
                 <td colspan="3" bgcolor="#999999">
-                    <img border="0" src="../images/spacer.gif" width="1" height="1" />
+                    <img border="0" src="../images/spacer.gif" width="1" height="1"  alt=""/>
                 </td>
             </tr>
             <tr>
@@ -220,7 +220,7 @@
                         <script type="text/javascript" language="JavaScript" src="http://hv3.webstat.com/cgi-bin/wsv2.cgi?82839"></script>
                         <noscript>
                             <a href="http://www.webstat.com">
-                                <img src="http://hv3.webstat.com/scripts/wsb.php?ac=82839" border="0" alt="Free Stat Tracker and Free Web Site Statistics by WebSTAT" />
+                                <img src="http://hv3.webstat.com/scripts/wsb.php?ac=82839" border="0" alt="Free Stat Tracker and Free Web Site Statistics by WebSTAT" alt="WebStats"/>
                             </a>
                         </noscript>
                         <!-- END WebSTAT Activation Code -->
@@ -229,19 +229,20 @@
                 <td colspan="2">
                     <p align="right">
                         <span class="smBlkText">
-                            <nobr>
+                           
 			<font size="1" color="#626262"><a href="default.aspx?pageToShow=WebPage&PreKatNr=-999&WebPage=Sitemap&AspxAutoDetectCookieSupport=1">Sitemap</a>, Copyright 2004-2013 pros-pro.com, All 
 			rights reserved</font><font color="#626262">&nbsp;&nbsp;&nbsp;
-			</font></nobr>
+			</font> 
                         </span><font face="Verdana" color="#626262" size="1">Designed &amp; Created By <span
                             style="font-weight: 700; text-decoration: none"><font color="#626262"><span style="text-decoration: none">
-                                <font color="#626262">Grigor Tonkov</font></span> </font></span></font>
+                                <font color="#626262">Grigor Tonkov</font></span> </font></span>
                                   | <a href="https://plus.google.com/u/0/b/104813036540513977037?rel=author">Pro's Pro</a> |
                                   <a href="https://plus.google.com/u/0/b/104813036540513977037?rel=publisher" rel="publisher">Pro's Pro Google+</a>
+                                  </font>
                         <br />
                         <span class="smBlkText">
-                            <nobr><font size="1" color="#626262">Optimiert 
-			für Microsoft Internet Explorer und Mozilla</font></nobr>
+                            <font size="1" color="#626262">Optimiert 
+			für Microsoft Internet Explorer und Mozilla</font> 
                         </span>
                     </p>
                 </td>
